[package]
name = "arti-hyper-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
arti-client = "0.33.0"
http = "1.3.1"
hyper-util = { git = "https://github.com/scraptors/hyper-util", rev = "7e2ff9b1c7b3f3ec2d55b467abfab9ab9f3e7abf", features = ["client", "client-legacy", "tokio", "http1", "http2"] }
thiserror = "2.0.15"
tokio = "1.47.1"
tor-rtcompat = "0.33.0"
tower-service = "0.3.3"

[dev-dependencies]
boring = { git = "https://github.com/scraptors/boring", rev = "a88181fec18ac6be35d3b2431e7c61d343731721", features = ["pq-experimental"] }
hyper = { git = "https://github.com/scraptors/hyper", rev = "c0f5afc323a932bf0677d740c9cd8a10417caf34", features = ["client", "http1", "http2", "h2"]}
hyper-boring = { git = "https://github.com/scraptors/boring", rev = "a88181fec18ac6be35d3b2431e7c61d343731721", features = ["hyper1", "runtime"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
webpki-root-certs = "1.0.2"
http = "1.3.1"
http-body-util = "0.1.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.99"
arti-client = { version = "0.33.0", features = ["onion-service-client"] }

[[example]]
name = "hyper-client-with-tor-connector"


