[package]
name = "arti-hyper-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Specify rustls as as the TLS verifier for internal deps. This makes building on nixos possible
arti-client = { version = "0.33.0", features = ["tokio", "compression", "onion-service-client", "rustls"], default-features = false }
http = "1.3.1"
hyper-util = { git = "https://github.com/scraptors/hyper-util", rev = "a83e94b8d83242ca50d6e82c94fa6423b40ec9d9", features = ["client", "client-legacy", "tokio", "http1", "http2"] }
thiserror = "2.0.15"
tokio = "1.47.1"
tor-rtcompat = { version = "0.33.0", default-features = false }
tower-service = "0.3.3"

[dev-dependencies]
boring = { git = "https://github.com/scraptors/boring", rev = "0888fec7496bf623248b66c72dd801a4c3f41952", features = ["pq-experimental"] }
hyper = { git = "https://github.com/scraptors/hyper", rev = "d512c79b9209b4e82abd75b35e88c3e88863be75", features = ["client", "http1", "http2", "h2"]}
hyper-boring = { git = "https://github.com/scraptors/boring", rev = "0888fec7496bf623248b66c72dd801a4c3f41952", features = ["hyper1", "runtime"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
webpki-root-certs = "1.0.2"
http = "1.3.1"
http-body-util = "0.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.99"
tower-http = { version = "0.6.6", features = ["decompression-full", "trace", "follow-redirect", "timeout"] }
tower = "0.5.2"
boring-util = { git = "https://github.com/scraptors/boring-util", rev = "a870c23e2e3a01bceba42004720d9bd5bd4aac0b" }

[[example]]
name = "hyper-client-with-tor-connector"


